@@ -1,7 +1,5 @@
 package com.sk.config.social.qq.connet;
 
-import java.nio.charset.Charset;
-
 import org.apache.commons.lang.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -10,6 +8,8 @@ import org.springframework.social.oauth2.AccessGrant;
 import org.springframework.social.oauth2.OAuth2Template;
 import org.springframework.util.MultiValueMap;
 import org.springframework.web.client.RestTemplate;
+
+import java.nio.charset.StandardCharsets;
 
 /**
  * qq登陆配置
@@ -35,16 +35,15 @@ public class QQOAuth2Template extends OAuth2Template {
 		String[] items = StringUtils.splitByWholeSeparatorPreserveAllTokens(responseStr, "&");
 		
 		String accessToken = StringUtils.substringAfterLast(items[0], "=");
-		Long expiresIn = new Long(StringUtils.substringAfterLast(items[1], "="));
+        Long expiresIn = Long.valueOf(StringUtils.substringAfterLast(items[1], "="));
 		String refreshToken = StringUtils.substringAfterLast(items[2], "=");
-		
 		return new AccessGrant(accessToken, null, refreshToken, expiresIn);
 	}
 	
 	@Override
 	protected RestTemplate createRestTemplate() {
 		RestTemplate restTemplate = super.createRestTemplate();
-		restTemplate.getMessageConverters().add(new StringHttpMessageConverter(Charset.forName("UTF-8")));
+		restTemplate.getMessageConverters().add(new StringHttpMessageConverter(StandardCharsets.UTF_8));
 		return restTemplate;
 	}
 
